# evt

./: .gitignore  AGENTS.md  LICENSE  README.md  launch.ps1  obc_export_win.il  pyproject.toml  pytest.ini  start_demo.bat
docs/: architecture_deviation_review_2026-04-21.md  delivery_quickstart_2026-04-20.md  development_roadmap.md  doc_ir_and_knowledge_units_progress_2026-04-19.md  domain_knowledge_model_v1_2026-04-21.md  domain_model_v1_reuse_assessment_2026-04-21.md  external_access_and_execution_chain_design_2026-04-21.md  final_delivery_notes.md  graph_regression_report_2026-04-21.json  internal_data_flow_across_wiki_graph_facts_evidence_2026-04-21.md  knowledge_chain_regression_report_2026-04-21.json  knowledge_first_principles_architecture_2026-04-21.md  knowledge_units_progress_2026-04-19.md  minimax_multimodal_support_analysis_2026-04-19.md  minimax_multimodal_support_check_2026-04-19.json  optimization_gap_analysis_from_task_list_2026-04-19.md  paddle_json_llm_pipeline_comparison_analysis_2026-04-19.md  paddlevl_vs_minimax_10page_benchmark_2026-04-20.json  paddlevl_vs_minimax_10page_benchmark_2026-04-20.md  parameter_regression_report_2026-04-20.json  pdf_conversion_ab_doc000007_2026-04-19.json  pdf_conversion_ab_doc000007_2026-04-19.md  phase5_subgraph_answer_progress_2026-04-21.md  query_semantic_parser_system_prompt_v1.md  structured_requirement_progress_2026-04-19.md  subgraph_regression_report_2026-04-21.json  system_architecture_and_feature_summary_2026-04-19.md  timing_regression_report_2026-04-21.json  topic_object_regression_report_2026-04-21.json  (+4 more)
(+244 files in other folders)
