[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-agent-kb"
version = "0.1.0"
description = "Enterprise agent knowledge base compiler and retrieval stack."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "PyMuPDF>=1.24",
]

[project.scripts]
eakb = "enterprise_agent_kb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
